--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="/assets/build/todo.built.js"></script>
+  <script type="text/javascript" src="/assets/build/todo.built.js"></script>
 </body>
 </html>
